--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,5 +1,10 @@
 [supervisord]
 nodaemon=true
+pidfile=/var/run/supervisord.pid
+logfile=/dev/stdout
+logfile_maxbytes = 0
+logfile_backups=0
+loglevel = info
 
 [program:php-fpm]
 command=php-fpm7 -F
