--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -6,14 +6,23 @@ logfile_maxbytes = 0
 logfile_backups=0
 loglevel = info
 
+[program:cron]
+command=crond -f
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=100
+
 [program:php-fpm]
 command=php-fpm7 -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
-startretries=0
+autorestart=true
+startretries=100
 
 [program:nginx]
 command=nginx -g 'daemon off;'
@@ -21,5 +30,5 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
-startretries=0
+autorestart=true
+startretries=100
